--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "zh-cn"
 title = "picobird's blog"
 paginate = 8
 ga = "UA-123-45"
+disqusShortname = 'synclue'
 
 # theme
 theme = "crisp"
