--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/nodejh/hugo-theme-mini.git
 [submodule "themes/crisp"]
 	path = themes/crisp
-	url = https://github.com/kathyqian/crisp
+	url = https://github.com/picobird/crisp
 [submodule "themes/loveit"]
 	path = themes/loveit
 	url = https://github.com/dillonzq/LoveIt
