--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/crisp"]
 	path = themes/crisp
 	url = https://github.com/picobird/crisp.git
+[submodule "themes/journal"]
+	path = themes/journal
+	url = https://github.com/SumiMakito/hexo-theme-Journal.git
