--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "themes/hugo-paper"]
 	path = themes/hugo-paper
 	url = https://github.com/nanxiaobei/hugo-paper.git
+[submodule "themes/paper"]
+	path = themes/paper
+	url = https://github.com/picobird/hugo-paper.git
