--- a/config.toml
+++ b/config.toml
@@ -18,16 +18,16 @@ theme = 'paper'
 
   # header social icons
   twitter = 'picobird'               # twitter.com/YOUR_TWITTER_ID
-  github = 'picobird'                 # github.com/YOUR_GITHUB_ID
+  #github = 'picobird'                 # github.com/YOUR_GITHUB_ID
   instagram = 'picobird'           # instagram.com/YOUR_INSTAGRAM_ID
   #linkedin = 'YOUR_LINKEDIN_ID'             # linkedin.com/in/YOUR_LINKEDIN_ID
   #mastodon = 'YOUR_MASTODON_LINK'           # e.g. 'https://mastodon.instance/@xxx'
   #rss = true                                # show rss icon
 
   # home page profile
-  avatar = 'https://cloud.synclue.com/2024/02/17/1708172499.png'                 # gravatar email or image url
-  name = 'Jason'
-  bio = '半神尐屾'
+  #avatar = 'https://cloud.synclue.com/2024/02/17/1708172499.png'                 # gravatar email or image url
+  #name = 'Jason'
+  #bio = '半神尐屾'
 
 
   # misc
